--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,33 +8,24 @@
 		tools:context=".MainActivity" android:orientation="vertical"
 		android:gravity="center">
 
+	<TextView
+			android:text="Players"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:id="@+id/playersLabel"
+			android:layout_marginBottom="15dp"
+			android:textAlignment="center" android:textSize="30sp"
+			android:textColor="#000000" android:fontFamily="sans-serif-medium"/>
 	<LinearLayout
 			android:orientation="horizontal"
-			android:layout_width="368dp"
-			android:layout_height="58dp"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
 			android:gravity="center" android:id="@+id/playerCountChooserLayout">
-		<TextView
-				android:text="Players"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:id="@+id/playersLabel"
-				android:layout_weight="1" android:textAlignment="center"/>
-		<SeekBar
-				android:layout_width="207dp"
-				android:layout_height="57dp"
+		<NumberPicker
 				android:id="@+id/playerCountChooser"
-				android:max="2" android:progress="1"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintHorizontal_bias="0.502"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintTop_toTopOf="parent"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintVertical_bias="0.619" android:layout_weight="1"/>
-		<TextView
-				android:layout_width="13dp"
+				android:layout_width="147dp"
 				android:layout_height="wrap_content"
-				android:inputType="numberDecimal"
-				android:ems="10"
-				android:id="@+id/playerCountTextView" android:layout_weight="1"/>
+				android:descendantFocusability="blocksDescendants"
+				android:theme="@style/NumberPickerText"/>
 	</LinearLayout>
 	<Button
 			android:text="start"
