--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,8 @@
 		<item name="colorAccent">@color/myColorAccent</item>
 	</style>
 
+	<style name="NumberPickerText">
+		<item name="android:textSize">22sp</item>
+	</style>
+
 </resources>
